# pjatk-suml

./: .gitignore  README.md  constraints-autogluon.vision.txt  dogs_app.py  packages_conda.ps1  packages_deploy_app.ps1  packages_deploy_autogluon.ps1  packages_deploy_kedro.ps1  packages_venv.ps1  pyproject.toml  requirements-app.txt  requirements-autogluon-plus-autogluon.vision.txt  requirements-autogluon.vision.txt  requirements-disabled.txt  requirements-kedro.txt  requirements.txt
src/: create_model.py  dogs.py  medium.py  run_dogs_app.ps1  test.py
src/autogluon/: autogluon_train.py  cw4.py
src/kedro/: kedro.ps1
src/kedro/kedro-project/: README.md  pyproject.toml  requirements-kedro.txt  session_store.db
src/kedro/kedro-project/conf/base/: catalog.yml
src/kedro/kedro-project/src/kedro_project/: __main__.py
src/kedro/kedro-project/src/kedro_project/pipelines/data_processing/: nodes.py  pipeline.py
src/kedro/kedro-project/src/kedro_project/pipelines/data_science/: nodes.py  pipeline.py
src_legacy/: medium.py  notes.txt  packages_conda.ps1  packages_poetry.ps1  packages_venv.ps1  pyproject.toml
